src/Sci.NET.Native/include/mathematics/trigonometry.h

SDN_DLL_EXPORT_API sin_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sin_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cos_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cos_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API tan_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API tan_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sin2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sin2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cos2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cos2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API tan2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API tan2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sinh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sinh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cosh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cosh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API tanh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API tanh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sinh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sinh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cosh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cosh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API tanh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API tanh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asin_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asin_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acos_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acos_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API atan_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API atan_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asin2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asin2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acos2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acos2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API atan2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API atan2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asinh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asinh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acosh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acosh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API atanh_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API atanh_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API asinh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API asinh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API acosh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API acosh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API atanh2_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API atanh2_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API csc_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API csc_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API sec_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API sec_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API cot_fp32(float *a, float *b, int64_t n);
SDN_DLL_EXPORT_API cot_fp64(double *a, double *b, int64_t n);
SDN_DLL_EXPORT_API csc2_fp32(float *a, float *b, int64_t n);